--- a/silver_network/views/silver_box_views.xml
+++ b/silver_network/views/silver_box_views.xml
@@ -34,32 +34,32 @@
 
                         <div class="oe_title">
                             <h1>
-                                <field name="name" placeholder="Nombre Caja NAP" modifiers="{}"/>
+                                <field name="name" placeholder="Nombre Caja NAP" />
                             </h1>
                         </div>
                         <group>
                             <group string="Datos">
-                                <field name="port_splitter_secondary" modifiers="{}"/>
+                                <field name="port_splitter_secondary" />
                                 <field name="splitter_id" readonly="1" on_change="1" can_create="true" can_write="true"
                                        modifiers="{&quot;readonly&quot;: true}"/>
                                 <field name="node_id" invisible="1" can_create="true" can_write="true"
                                        modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
                             </group>
                             <group string="Capacidad NAP">
-                                <field name="capacity_nap" modifiers="{}"/>
+                                <field name="capacity_nap" />
                                 <field name="capacity_usage_nap" modifiers="{&quot;readonly&quot;: true}"/>
                             </group>
                         </group>
 
                         <group string="Datos Ubicacion">
                             <group>
-                                <field name="country_id" can_create="false" can_write="false" modifiers="{}"/>
-                                <field name="state_id" can_create="true" can_write="true" modifiers="{}"/>
-                                <field name="zip" modifiers="{}"/>
+                                <field name="country_id" can_create="false" can_write="false" />
+                                <field name="state_id" can_create="true" can_write="true" />
+                                <field name="zip" />
                             </group>
                             <group>
-                                <field name="street" modifiers="{}"/>
-                                <field name="street2" modifiers="{}"/>
+                                <field name="street" />
+                                <field name="street2" />
                             </group>
                         </group>
                         <group>
@@ -67,37 +67,37 @@
                                 <label for="date_localization" string="Geolocalizacion"/>
                                 <div>
                                     <span>Lat :</span>
-                                    <field name="gps_lat" nolabel="1" class="oe_inline" modifiers="{}"/>
+                                    <field name="gps_lat" nolabel="1" class="oe_inline" />
                                     <span>, Long:</span>
-                                    <field name="gps_lon" nolabel="1" class="oe_inline" modifiers="{}"/>
+                                    <field name="gps_lon" nolabel="1" class="oe_inline" />
                                     <br/>
                                     <span invisible="date_localization==False"
                                           modifiers="{&quot;invisible&quot;: [[&quot;date_localization&quot;, &quot;=&quot;, false]]}">
                                         Actualizado el:
                                     </span>
-                                    <field name="date_localization" nolabel="1" class="oe_inline" modifiers="{}"/>
+                                    <field name="date_localization" nolabel="1" class="oe_inline" />
                                     <field name="is_line_nap" widget="boolean_toggle" invisible="1"/>
                                 </div>
                             </group>
                             <group name="vlan_port" string="Vlan Administrativa" invisible="is_line_nap==False"
                                  >
-                                <field name="s_vlan" modifiers="{}"/>
-                                <field name="c_vlan" modifiers="{}"/>
+                                <field name="s_vlan" />
+                                <field name="c_vlan" />
                             </group>
                         </group>
 
                         <notebook>
                             <page string="Series Onu" colspan="4">
-                                <field name="onu_ids_silver" nolabel="1" modifiers="{}">
+                                <field name="onu_ids_silver" nolabel="1" >
                                 </field>
                             </page>
                         </notebook>
                     </sheet>
                     <div class="o_attachment_preview"/>
                     <div class="oe_chatter">
-                        <field name="message_follower_ids" modifiers="{}"/>
-                        <field name="activity_ids" modifiers="{}"/>
-                        <field name="message_ids" modifiers="{}"/>
+                        <field name="message_follower_ids" />
+                        <field name="activity_ids" />
+                        <field name="message_ids" />
                     </div>
                 </form>
             </field>
