--- a/silver_product/views/silver_olt_card_port_views.xml
+++ b/silver_product/views/silver_olt_card_port_views.xml
@@ -6,14 +6,14 @@
             <field name="model">silver.olt.card.port</field>
             <field name="inherit_id" ref="silver_network.view_silver_olt_card_port_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//group[@name='port']/group[1]" position="inside">
+                <!--xpath expr="//group[@name='port']/group[1]" position="inside">
                     <field name="stock_lot_id"/>
                     <field name="brand_name"/>
                     <field name="model_name"/>
                     <field name="software_version"/>
                    <field name="firmware_version"/>
-                     <!--field name="serial_number"/-->
-                </xpath>
+
+                </xpath-->
             </field>
         </record>
     </data>
