--- a/silver_provisioning/views/silver_ap_views.xml
+++ b/silver_provisioning/views/silver_ap_views.xml
@@ -12,7 +12,7 @@
                         <field string="Contratos" name="contract_count" widget="statinfo"/>
                     </button>
                 </xpath-->
-   <xpath expr="//page[@name='config']" position="before">
+   <xpath expr="//page[1]" position="before">
 
                       <page string="Contratos">
                    <field name="contract_ids"/>
